--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="product-info">
                         <h2>Кредитная карта</h2>
                         <p>Снятие наличных без комиссии</p>
-                        <a href="https://trnsfx.ru/go/sp7vn6st35" class="apply-btn" data-product="2">Оформить</a>
+                        <a href="https://trnsfx.ru/go/sfxh90caqh" class="apply-btn" data-product="2">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="product-info">
                         <h2>Кредит наличными</h2>
                         <p>До 90 дней без первого платежа</p>
-                        <a href="https://trnsfx.ru/go/seedpr685v" class="apply-btn" data-product="4">Оформить</a>
+                        <a href="https://trnsfx.ru/go/svqxcz3vjm" class="apply-btn" data-product="4">Оформить</a>
                     </div>
                 </div>
             </div>
