--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="product-info">
                         <h2>Дебетовая карта</h2>
                         <p>Кэшбек до 3000₽ в месяц</p>
-                        <a href="https://trnsfx.ru/go/szwy7zkz28" class="apply-btn" data-product="1">Оформить</a>
+                        <a href="https://vldmnt.ru/go/slxnn07cu1" class="apply-btn" data-product="1">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <div class="product-info">
                         <h2>Кредитная карта</h2>
                         <p>Снятие наличных без комиссии</p>
-                        <a href="https://trnsfx.ru/go/sfxh90caqh" class="apply-btn" data-product="2">Оформить</a>
+                        <a href="https://trnsfx.ru/go/s1jr5blxn6" class="apply-btn" data-product="2">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                     <div class="product-info">
                         <h2>Займ на карту</h2>
                         <p>Под выгодный процент</p>
-                        <a href="https://trnsfx.ru/go/s91tmubia0" class="apply-btn" data-product="3">Оформить</a>
+                        <a href="https://trnsfx.ru/go/s3h7nozly3" class="apply-btn" data-product="3">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="product-info">
                         <h2>Кредит наличными</h2>
                         <p>До 90 дней без первого платежа</p>
-                        <a href="https://trnsfx.ru/go/svqxcz3vjm" class="apply-btn" data-product="4">Оформить</a>
+                        <a href="https://trnsfx.ru/go/su7wmtbbn2" class="apply-btn" data-product="4">Оформить</a>
                     </div>
                 </div>
             </div>
